--- a/public/404.html
+++ b/public/404.html
@@ -21,7 +21,7 @@
   <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
-    <a href="/">Back to safety</a>
+    <a href="http://www.imageranker.co/"/>Back to safety</a>
   </div>
 </body>
 </html>
